# cosy-ai-asr

./: README.md  pyproject.toml
laboratorium_ai_asr/: __main__.py  main.py
